# ManuscriptAnalysis

./: README.md  W1.xml  app.py  pyproject.toml  requirements.txt  run_cli.py
examples/: manuscripts.txt
src/arabic_witness/: __init__.py  align.py  cli.py  config.py  io.py  models.py  ocr.py  openai_utils.py  postprocess.py  preprocess.py  report.py  tei.py  utils.py
src/arabic_witness_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
